--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 ---
+jdk: oraclejdk8
 language: scala
-jdk:
-  - oraclejdk8
 script: "sbt packageBin"
 scala:
-- 2.11.1
+- 2.11.2
 before_script:
  - "echo JAVA_HOME $JAVA_HOME"
  - "echo 'which java' `which java`"
